--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-*.xcuserstate
-project.xcworkspace
-xcuserdata
-UserInterfaceState.xcuserstate
-project.xcworkspace/
+*~
+.DS_Store
 xcuserdata/
-UserInterface.xcuserstate
