--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-*~
-.DS_Store
+*.xcuserstate
+project.xcworkspace
+xcuserdata
+UserInterfaceState.xcuserstate
+project.xcworkspace/
 xcuserdata/
+UserInterface.xcuserstate
